k8s/3-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-gateway-backend
  namespace: master-gateway-ns
  labels:
    app: master-gateway-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master-gateway-backend
  template:
    metadata:
      labels:
        app: master-gateway-backend
    spec:
      containers:
        - name: backend
          image: javi3103/master-gateway-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
