k8s/4-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-gateway-frontend
  namespace: master-gateway-ns
spec:
  selector:
    app: master-gateway-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
